--- a/composer.json
+++ b/composer.json
@@ -42,9 +42,8 @@
         }
     ],
     "require": {
-        "php": "^8.0.2",
-        "tomatophp/tomato-admin": "^1.0",
-        "tomatophp/tomato-components": "^1.0",
+        "php": "^8.1|^8.2",
+        "tomatophp/tomato-admin": "^1.1",
         "tomatophp/console-helpers": "^1.0",
         "spatie/laravel-permission": "*"
     }
